--- a/CatalogPage/catalog.html
+++ b/CatalogPage/catalog.html
@@ -47,7 +47,6 @@
     <div class="inner">❄</div>
   </div>
 </div>
-    <h1>PRODUCT CATALOG</h1>  
 
     <!-- Side navigation bar -->
     <nav class="sidebar">
@@ -61,21 +60,97 @@
   <section class="catalog">
     <div class="product-card">
       <img src="/images/catalog/1.png" alt="Product 1">
-      <h2>Product 1</h2>
-      <p>A description of product 1 goes here.</p>
-      <button>Add to Cart</button>
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
     </div>
     <div class="product-card">
       <img src="/images/catalog/2.png" alt="Product 2">
-      <h2>Product 2</h2>
-      <p>A description of product 2 goes here.</p>
-      <button>Add to Cart</button>
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
     </div>
     <div class="product-card">
       <img src="/images/catalog/3.png" alt="Product 3">
-      <h2>Product 3</h2>
-      <p>A description of product 3 goes here.</p>
-    <button>Add to Cart</button>
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/5.png" alt="Product 5">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/6.png" alt="Product 6">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/7.png" alt="Product 7">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div><div class="product-card">
+      <img src="/images/catalog/8.png" alt="Product 8">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/9.png" alt="Product 9">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/10.png" alt="Product 10">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div><div class="product-card">
+      <img src="/images/catalog/11.png" alt="Product 11">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/12.png" alt="Product 12">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/13.png" alt="Product 13">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/14.png" alt="Product 14">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/15.png" alt="Product 15">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/16.png" alt="Product 16">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/17.png" alt="Product 17">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/18.png" alt="Product 18">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/19.png" alt="Product 19">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/20.png" alt="Product 20">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/22.png" alt="Product 22">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/23.png" alt="Product 23">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/24.png" alt="Product 24">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/25.png" alt="Product 25">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
+    </div>
+    <div class="product-card">
+      <img src="/images/catalog/25.png" alt="Product 25">
+      <button><img src="/images/catalog/add-to-cart.png" alt="add to cart"></button>
     </div>
   </section>
 
